# eca-22

./: .gitignore  .pre-commit-config.yaml
pythonTest0/: cuda.py  rule22-pythonBinary-MM.py  rule22-pythonBinary.py
pythonTest0/eca-morphological/: .pylintrc  Poetry-README.md  README.md  myapp2.py  pyproject.toml  run.sh  test.sh
pythonTest0/eca-morphological/back/: myapp.py  myapp3.py
pythonTest0/eca-morphological/src/: CA_MM_Object.py  CA_Object.py  app-mm.py  app.py  app_fra_tcount.py  app_mm.py  ca_class.py  ca_mm_class.py  config.py  fra_count_tr_class.py  fra_count_tr_class.py.bk  log_config.json  web-app.py  web-app.py-bk
pythonTest0/eca-morphological/static/: script-canva.js  script.js  styles-canva.css  styles.css
pythonTest0/eca-morphological/templates/: debug.html  index.html  index.html-css  index.html.bk
pythonTest0/src/: CA_MM_Object.py  CA_Object.py  app-mm.py  app.py
uviapp/: main.py
uviapp/templates/: index.html
