[project]
name = "eca-morphological"
version = "0.1.0"
description = ""
authors = [
    {name = "carlozrm90",email = "carloszrm90@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pillow (>=11.3.0,<12.0.0)",
    "numpy (>=2.2,<2.3.2)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)"
]
[tool.poetry]
packages = [{include = "eca_morphological", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
